@@ -20,33 +20,24 @@
  */
 package org.biojava.nbio.structure.align.xml;
 
-import java.io.IOException;
-import java.io.StringReader;
-import java.util.ArrayList;
-import java.util.List;
-
-import javax.vecmath.Matrix4d;
-import javax.xml.parsers.DocumentBuilder;
-import javax.xml.parsers.DocumentBuilderFactory;
-import javax.xml.parsers.ParserConfigurationException;
-
 import org.biojava.nbio.structure.StructureIdentifier;
 import org.biojava.nbio.structure.align.client.StructureName;
-import org.biojava.nbio.structure.align.multiple.Block;
-import org.biojava.nbio.structure.align.multiple.BlockImpl;
-import org.biojava.nbio.structure.align.multiple.BlockSet;
-import org.biojava.nbio.structure.align.multiple.BlockSetImpl;
-import org.biojava.nbio.structure.align.multiple.MultipleAlignment;
-import org.biojava.nbio.structure.align.multiple.MultipleAlignmentEnsemble;
-import org.biojava.nbio.structure.align.multiple.MultipleAlignmentEnsembleImpl;
-import org.biojava.nbio.structure.align.multiple.MultipleAlignmentImpl;
-import org.biojava.nbio.structure.align.multiple.ScoresCache;
+import org.biojava.nbio.structure.align.multiple.*;
 import org.w3c.dom.Document;
 import org.w3c.dom.NamedNodeMap;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 import org.xml.sax.InputSource;
 import org.xml.sax.SAXException;
+
+import javax.vecmath.Matrix4d;
+import javax.xml.parsers.DocumentBuilder;
+import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
+import java.io.IOException;
+import java.io.StringReader;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
  * Parse an XML file representing a {@link MultipleAlignmentEnsemble}, so
@@ -77,7 +68,7 @@ public class MultipleAlignmentXMLParser {
 			throws ParserConfigurationException, SAXException, IOException {
 
 		List<MultipleAlignmentEnsemble> ensembles =
-				new ArrayList<MultipleAlignmentEnsemble>();
+				new ArrayList<>();
 
 		//Convert string to XML document
 		DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
@@ -113,14 +104,16 @@ public class MultipleAlignmentXMLParser {
 		for (int i=0; i<children.getLength(); i++) {
 
 			Node child = children.item(i);
-			if (child.getNodeName().equals("MultipleAlignment")){
-				parseMultipleAlignment(child, ensemble);
-			}
-			else if (child.getNodeName().equals("Structures")){
-				parseStructures(child, ensemble);
-			}
-			else if (child.getNodeName().equals("ScoresCache")){
-				parseScoresCache(child, ensemble);
+			switch (child.getNodeName()) {
+				case "MultipleAlignment":
+					parseMultipleAlignment(child, ensemble);
+					break;
+				case "Structures":
+					parseStructures(child, ensemble);
+					break;
+				case "ScoresCache":
+					parseScoresCache(child, ensemble);
+					break;
 			}
 		}
 
@@ -150,22 +143,24 @@ public class MultipleAlignmentXMLParser {
 	public static BlockSet parseBlockSet(Node root, MultipleAlignment msa) {
 
 		BlockSet bs = new BlockSetImpl(msa);
-		List<Matrix4d> transforms = new ArrayList<Matrix4d>();
+		List<Matrix4d> transforms = new ArrayList<>();
 		NodeList children = root.getChildNodes();
 
 		for (int i=0; i<children.getLength(); i++) {
 
 			Node child = children.item(i);
 
-			if (child.getNodeName().equals("Block")){
-				parseBlock(child, bs);
-			}
-			else if (child.getNodeName().equals("Matrix4d")){
-				Matrix4d t = parseMatrix4d(child);
-				transforms.add(t);
-			}
-			else if (child.getNodeName().equals("ScoresCache")){
-				parseScoresCache(child, bs);
+			switch (child.getNodeName()) {
+				case "Block":
+					parseBlock(child, bs);
+					break;
+				case "Matrix4d":
+					Matrix4d t = parseMatrix4d(child);
+					transforms.add(t);
+					break;
+				case "ScoresCache":
+					parseScoresCache(child, bs);
+					break;
 			}
 		}
 		//Because if it is 0 means that there were no transformations
@@ -178,7 +173,7 @@ public class MultipleAlignmentXMLParser {
 	public static Block parseBlock(Node root, BlockSet blockSet) {
 
 		Block b = new BlockImpl(blockSet);
-		List<List<Integer>> alignRes = new ArrayList<List<Integer>>();
+		List<List<Integer>> alignRes = new ArrayList<>();
 		b.setAlignRes(alignRes);
 		NodeList children = root.getChildNodes();
 
@@ -195,14 +190,14 @@ public class MultipleAlignmentXMLParser {
 				while (node!=null){
 
 					if (alignRes.size() < str) {
-						alignRes.add(new ArrayList<Integer>());
+						alignRes.add(new ArrayList<>());
 					}
 
 					String residue = node.getTextContent();
 					if (residue.equals("null")){
 						alignRes.get(str-1).add(null);
 					} else {
-						alignRes.get(str-1).add(new Integer(residue));
+						alignRes.get(str-1).add(Integer.valueOf(residue));
 					}
 
 					str++;
@@ -264,19 +259,19 @@ public class MultipleAlignmentXMLParser {
 
 		String ioTime = atts.getNamedItem("IOTime").getTextContent();
 		if (!ioTime.equals("null")){
-			ensemble.setIoTime(new Long(ioTime));
+			ensemble.setIoTime(Long.valueOf(ioTime));
 		}
 
 		String time = atts.getNamedItem("CalculationTime").getTextContent();
 		if (!time.equals("null")){
-			ensemble.setCalculationTime(new Long(time));
+			ensemble.setCalculationTime(Long.valueOf(time));
 		}
 	}
 
 	public static void parseStructures(Node root,
 			MultipleAlignmentEnsemble ensemble) {
 
-		List<StructureIdentifier> names = new ArrayList<StructureIdentifier>();
+		List<StructureIdentifier> names = new ArrayList<>();
 		ensemble.setStructureIdentifiers(names);
 
 		NamedNodeMap atts = root.getAttributes();
